[gd_scene load_steps=21 format=3 uid="uid://bb2xr3x6yrncg"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_5goeo"]
[ext_resource type="Script" path="res://scripts/Gun.gd" id="2_7jq0l"]
[ext_resource type="AudioStream" uid="uid://cmpnyi3m1hv6e" path="res://sfx/footstep_blood_0.ogg" id="2_q5vd4"]
[ext_resource type="Script" path="res://scripts/PlayerCamera.gd" id="2_uidk2"]
[ext_resource type="AudioStream" uid="uid://cs06853sfgckf" path="res://sfx/footstep_blood_1.ogg" id="3_2tkrd"]
[ext_resource type="AudioStream" uid="uid://cugtwso78ymlj" path="res://sfx/Pistol Shot A.wav" id="3_t4d60"]
[ext_resource type="AudioStream" uid="uid://gpxsrxkvlhjv" path="res://sfx/Pistol Shot B.wav" id="4_bsa7w"]
[ext_resource type="AudioStream" uid="uid://ctqovct3j608s" path="res://sfx/footstep_blood_2.ogg" id="4_dhrq3"]
[ext_resource type="AudioStream" uid="uid://xw3v6eyxuuma" path="res://sfx/footstep_blood_3.ogg" id="5_k8k4n"]
[ext_resource type="AudioStream" uid="uid://bw5kdxcjiesc5" path="res://sfx/Pistol Shot C.wav" id="5_o3jd5"]
[ext_resource type="AudioStream" uid="uid://5wytrqj7ybso" path="res://sfx/footstep_blood_4.ogg" id="6_d80hy"]
[ext_resource type="Script" path="res://scripts/HealthComponent.gd" id="7_luamq"]
[ext_resource type="Script" path="res://scripts/ScreenShake.gd" id="13_amhg6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4kj3u"]
radius = 0.45
height = 1.78

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mw1jx"]
albedo_color = Color(0.262745, 0.262745, 0.262745, 1)

[sub_resource type="BoxMesh" id="BoxMesh_tlfsc"]
material = SubResource("StandardMaterial3D_mw1jx")

[sub_resource type="Animation" id="Animation_81rts"]
resource_name = "Idle"
length = 0.1
step = 0.01

[sub_resource type="Animation" id="Animation_jnohd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_15q4y"]
resource_name = "Shoot"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.1),
"transitions": PackedFloat32Array(1, 0.307786, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.872665, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5xenm"]
_data = {
"Idle": SubResource("Animation_81rts"),
"RESET": SubResource("Animation_jnohd"),
"Shoot": SubResource("Animation_15q4y")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_5goeo")
speed = 7.0
acceleration = 150.0
sfx_footsteps = Array[AudioStream]([ExtResource("2_q5vd4"), ExtResource("3_2tkrd"), ExtResource("4_dhrq3"), ExtResource("5_k8k4n"), ExtResource("6_d80hy")])

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("7_luamq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.805479, 0)
shape = SubResource("CapsuleShape3D_4kj3u")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.31123, 0)
script = ExtResource("2_uidk2")

[node name="ShootRay" type="RayCast3D" parent="Camera"]
target_position = Vector3(0, 0, -200)
collision_mask = 4

[node name="Gun" type="Node3D" parent="Camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.145, -0.189, -0.218)
script = ExtResource("2_7jq0l")
sfx_gunshot = Array[AudioStream]([ExtResource("3_t4d60"), ExtResource("4_bsa7w"), ExtResource("5_o3jd5")])

[node name="Head" type="MeshInstance3D" parent="Camera/Gun"]
transform = Transform3D(0.0456897, 0, 0, 0, 0.0717363, 0, 0, 0, 0.217686, 0, 0.0601597, -0.0738529)
mesh = SubResource("BoxMesh_tlfsc")
skeleton = NodePath("../../..")

[node name="Grip" type="MeshInstance3D" parent="Camera/Gun"]
transform = Transform3D(0.0456897, 0, 0, 0, -3.13569e-09, -0.156067, 0, 0.0717363, -6.82191e-09, -0.000450373, 0.0158834, 0.00013575)
mesh = SubResource("BoxMesh_tlfsc")
skeleton = NodePath("../../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera/Gun"]
libraries = {
"": SubResource("AnimationLibrary_5xenm")
}

[node name="SFXPlayer_Shoot" type="AudioStreamPlayer3D" parent="Camera/Gun"]
bus = &"SFX"

[node name="GunBarrel" type="RayCast3D" parent="Camera/Gun"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0610828, -0.200525)
target_position = Vector3(0, 0, -0.5)

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="Camera"]
transform = Transform3D(1, 0, 0, 0, 0.981975, 0.18901, 0, -0.18901, 0.981975, 0, 0, 0)
light_color = Color(0.968627, 0.352941, 0.431373, 1)
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_angular_distance = 0.25

[node name="ScreenShake" type="Node" parent="Camera"]
script = ExtResource("13_amhg6")
random_strength = 1.0
shake_fade = 20.0

[node name="Frequency" type="Timer" parent="Camera/ScreenShake"]

[node name="Duration" type="Timer" parent="Camera/ScreenShake"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Crosshair" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
color = Color(1, 1, 1, 0.513726)

[node name="SFX_Footstep" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.16573, 0)
volume_db = -22.0
attenuation_filter_cutoff_hz = 3000.0

[connection signal="death" from="HealthComponent" to="." method="_on_health_component_death"]
[connection signal="timeout" from="Camera/ScreenShake/Frequency" to="Camera/ScreenShake" method="_on_frequency_timeout"]
[connection signal="timeout" from="Camera/ScreenShake/Duration" to="Camera/ScreenShake" method="_on_duration_timeout"]
